# drug-approval-analytics

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  conftest.py  environment.yml  pytest.ini  requirements.txt  setup.cfg  setup.py
DrugApproval/data/: agents.py  datasources.py  extract.py
DrugApproval/database/: access.py  create.py  orm.py
DrugApproval/lab/: queries.py  scratchpad.py
DrugApproval/pipeline/: core.py
config/: config.py  heading.json
configs/: __init__.py  aact_config.py  config.py  heading.json
docs/: Makefile  conf.py  index.rst  make.bat
drug-approval/: logging.py  main.py
drug-approval/config/: sample.cfg
drug-approval/data/: dataobjects.py  metadata.py  transform.py
drug-approval/database/: __init__.py
drug-approval/lab/: files.py  scrape.py
drug-approval/pipeline/: steps.py
notebooks/: 0.0 setup.ipynb  1.0 data.ipynb  2.0 eda.ipynb  9.0 workbook.ipynb  B.0 packaging.ipynb  eda.ipynb  extract.ipynb  make_datasets.ipynb  stage.ipynb
predict-fda/database/: connections.py
references/: aact codebook.xlsx  aact201603_comprehensive_data_dictionary_1.xlsx  aact_features.xlsx  aact_tables.xlsx  data_sources.csv  data_sources.xlsx  datasets.xlsx  ieee.csl  openFDA Human Drug Data Dictionary.xlsx  peerj-04-2331-s002.txt
reports/: .Rhistory  0.0 home.Rmd  0.0-home.html  1.0-intro.html  2.0 data.Rmd  3.0 eda.Rmd  references.bib
reports/figures/: datasets.csv
reports/manuscript/: 1.0 intro.Rmd  2.0 methods.Rmd  4.0 Discussion.Rmd  references.bib
src/: logging.py  main.py
src/analysis/: descriptive.py
src/application/: config.py  eda.py  extract.py  transform.py
src/data/: clean.py  database.py  dataobject.py  dataobjects.py  datasources.py  eda.py  explore.py  extract.py  make_datasets.py  metadata.py  sources.py  statistics.py  studies.py  transform.py  websource.py
src/database/: __init__.py  aact_db.py  orm.py  ormdb.py  (+2 more)
tests/: __init__.py
(+133 files in other folders)
