[metadata]
name=DrugApproval
packages=find_packages()
version=0.1.0
description=AI-Based Clinical Drug Development Approval Decision Support
long_description=file: README.md
long_description_content_type=text/markdown
author=John James
author_email=john.james@nov8.ai    
license=BSD-3
url=https://github.com/john-james-sf/DrugApproval
classifiers=
    Programming Language :: Python :: 3.9
    Programming Language :: R
    Programming Language :: SQL
    License :: OSI Approved :: BSD License 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Healthcare Industry
    Natural Language :: English
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: Scientific/Engineering :: Medical Science Apps.


[options]
packages=find:
package_dir = DrugApproval
zip_safe = False
include_package_data = True

[options.packages.find]
where=DrugApproval

[build_ext]
inplace=1